Add keyboard input to website

--- a/gameboy_emulator/www/index.html
+++ b/gameboy_emulator/www/index.html
@@ -8,7 +8,7 @@
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
     <canvas id="canvas" width=160 height=144 style="width: calc(160px*5);
     height: calc(144px*5);
-    image-rendering: crisp-edges;"></canvas>
+    image-rendering: pixelated;"></canvas>
     <script src="./bootstrap.js"></script>
   </body>
 </html>
