Add rom upload to site

--- a/gameboy_emulator/www/index.html
+++ b/gameboy_emulator/www/index.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <canvas id="screen" width=160 height=144></canvas>
+    <canvas id="screen" width=160 height=144>
+    </canvas>
+    <div id="rom-upload-wrapper">
+      <label for="rom-upload">Choose GameBoy rom to play</label>
+      <input type="file" id="rom-upload">
+    </div>
     <div>
       <h1>Keybinds</h1>
       <table>
