--- a/index.html
+++ b/index.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Gameboy Emulator</title>
-  </head>
-  <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <canvas id="screen" width=160 height=144>
-    </canvas>
-    <div id="rom-upload-wrapper">
-      <label for="rom-upload">Choose GameBoy rom to play</label>
-      <input type="file" id="rom-upload">
-    </div>
-    <div>
-      <h1>Keybinds</h1>
-      <table>
-        <tr>
-          <td>A</td>
-          <td>B</td>
-          <td>Start</td>
-          <td>Select</td>
-          <td>Directions</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-          <td>4</td>
-          <td>Arrow Keys</td>
-        </tr>
-      </table>
-    </div>
-    <div id="credits">
-      <div id="author">Lukas Boelling</div>
-    </div>
-    <script src="./bootstrap.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.eda0a313.js"></script><link href="/static/css/main.ba71e73b.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
